objects/ServiceProviderRelationship__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Vendor__c, Vendor__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Vendor__r.RecordtypeName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Vendors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carve_out_Integration_Fee_Charged__c</fullName>
        <label>Carve-out/ Integration Fee Charged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Provider Relationships</relationshipLabel>
        <relationshipName>Service_Provider_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>Effective date for Vendor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Involvement_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enhanced Personal Healthcare (EPHC)</fullName>
                </value>
                <value>
                    <fullName>Discount Sharing</fullName>
                </value>
                <value>
                    <fullName>Program Integrity</fullName>
                </value>
                <value>
                    <fullName>Out of network savings fee (aka NCN/MPI)</fullName>
                </value>
                <value>
                    <fullName>Medical/RX Rebate Sharing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldsCommingling__c</fullName>
        <inlineHelpText>Specific To RX or Behavioral Health Vendors Only.</inlineHelpText>
        <label>Fields Commingling</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deductible</fullName>
                </value>
                <value>
                    <fullName>OOP</fullName>
                </value>
                <value>
                    <fullName>LTM</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HistoryConversion__c</fullName>
        <description>Picklist values Yes and No for history conversion</description>
        <label>History Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Involvement_Type__c</fullName>
        <label>Involvement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Slice</fullName>
                </value>
                <value>
                    <fullName>Carve Out</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Management Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsEntireGroupImpacted__c</fullName>
        <description>Does this Impact Entire Group?</description>
        <inlineHelpText>Does this Impact Entire Group?</inlineHelpText>
        <label>Is Entire Group Impacted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Involvement_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Disease Management</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                </value>
                <value>
                    <fullName>Group Retiree</fullName>
                </value>
                <value>
                    <fullName>Group Retiree Solutions (GRS)</fullName>
                </value>
                <value>
                    <fullName>Ex-Pat</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Medical Management</fullName>
                </value>
                <value>
                    <fullName>Non Contracted Provider Savings</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Spec/Agg Stop Loss</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Specific Stop Loss</fullName>
                </value>
                <value>
                    <fullName>STD</fullName>
                </value>
                <value>
                    <fullName>Subrogation</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Voluntary Disability</fullName>
                </value>
                <value>
                    <fullName>Voluntary Life</fullName>
                </value>
                <value>
                    <fullName>Worksite Wellness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <label>Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Vendor_s__c</fullName>
        <label>Name of Vendor(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AccordWare</fullName>
                </value>
                <value>
                    <fullName>ACS (Affiliated Computer Services, Inc.)</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Aflac</fullName>
                </value>
                <value>
                    <fullName>Aliquant</fullName>
                </value>
                <value>
                    <fullName>Alliant Insurance</fullName>
                </value>
                <value>
                    <fullName>Allied Benefit Systems, Inc.</fullName>
                </value>
                <value>
                    <fullName>AmeriBen</fullName>
                </value>
                <value>
                    <fullName>American Benefit Corp</fullName>
                </value>
                <value>
                    <fullName>Aon</fullName>
                </value>
                <value>
                    <fullName>Aon Hewitt</fullName>
                </value>
                <value>
                    <fullName>ARC Administrators</fullName>
                </value>
                <value>
                    <fullName>Assurant</fullName>
                </value>
                <value>
                    <fullName>Benefit Concepts</fullName>
                </value>
                <value>
                    <fullName>Benefit Focus</fullName>
                </value>
                <value>
                    <fullName>Benefit Harbor</fullName>
                </value>
                <value>
                    <fullName>Benefits Connect</fullName>
                </value>
                <value>
                    <fullName>Benefit Services Group (BSG)</fullName>
                </value>
                <value>
                    <fullName>Benelogic</fullName>
                </value>
                <value>
                    <fullName>Benesys Inc</fullName>
                </value>
                <value>
                    <fullName>Benesyst</fullName>
                </value>
                <value>
                    <fullName>Benetrac</fullName>
                </value>
                <value>
                    <fullName>BOS (Benefit Outsourcing)</fullName>
                </value>
                <value>
                    <fullName>BSwift</fullName>
                </value>
                <value>
                    <fullName>Buck Consultants (Xerox)</fullName>
                </value>
                <value>
                    <fullName>Business Plans Inc</fullName>
                </value>
                <value>
                    <fullName>Business Solver</fullName>
                </value>
                <value>
                    <fullName>CBIZ</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewVendor__c</fullName>
        <inlineHelpText>If this is a new client vendor, you will need to complete the effective date field below.</inlineHelpText>
        <label>New Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Active_Renewal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please indicate the next time this client will be going out to bid for this particular line of business</inlineHelpText>
        <label>Next Active Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Provider Relationships</relationshipLabel>
        <relationshipName>Service_Provider_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Sprint 1.2 User story JIRA ID 452</description>
        <label>Opportunity?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PackageContractCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If this does not affect entire group, please provide Package/Contract Codes affected.</inlineHelpText>
        <label>Package/Contract Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProviderFinderUsed__c</fullName>
        <inlineHelpText>If Transparency Vendor, does Client utilize Anthem Provider Finder?</inlineHelpText>
        <label>Provider Finder Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermDate__c</fullName>
        <description>Term Date For Vendor</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Terming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VendorName__c</fullName>
        <formula>Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VendorName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorType__c</fullName>
        <description>Vendor Type- US-22393//Deloitte Offshore</description>
        <inlineHelpText>Select what Type the Vendor is</inlineHelpText>
        <label>Vendor Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Benefit Administration</fullName>
                </value>
                <value>
                    <fullName>Biometrics</fullName>
                </value>
                <value>
                    <fullName>COBRA</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Critical Illness</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Dep Care Spend Acct</fullName>
                </value>
                <value>
                    <fullName>Digital Provider</fullName>
                </value>
                <value>
                    <fullName>Direct Bill</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Disease Management</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Fertility</fullName>
                </value>
                <value>
                    <fullName>Fertility Network</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                </value>
                <value>
                    <fullName>Health Reimbursement Account</fullName>
                </value>
                <value>
                    <fullName>HR Service Center</fullName>
                </value>
                <value>
                    <fullName>HSA Administrators</fullName>
                </value>
                <value>
                    <fullName>Incentives</fullName>
                </value>
                <value>
                    <fullName>Ex-Pat</fullName>
                </value>
                <value>
                    <fullName>IT Vendor</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Managed Care Vendor</fullName>
                </value>
                <value>
                    <fullName>Onsite Clinic</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Psychiatric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Name of the Vendor</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Provider Relationships (Vendor)</relationshipLabel>
        <relationshipName>Vendors2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Provider Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPR-{0000}</displayFormat>
        <label>Service Provider Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Provider Relationships</pluralLabel>
    <recordTypes>
        <fullName>LG_Service_Provider</fullName>
        <active>true</active>
        <label>LG Service Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>NA_Service_Provider</fullName>
        <active>true</active>
        <label>NA Service Provider</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ANA_VR_VND01_NewVendorCheck</fullName>
        <active>true</active>
        <description>Description	Checks if Vendor is new, and enforces effective date if so.</description>
        <errorConditionFormula>AND
(
 !$User.BypassValidation__c ,
 ISPICKVAL( NewVendor__c , &quot;Yes&quot;)
 &amp;&amp; ISBLANK( EffectiveDate__c )
)
&amp;&amp; Terming__c = False
&amp;&amp; $Profile.Name &lt;&gt; &quot;API User&quot;
&amp;&amp; ISPICKVAL(Account__r.Anthem_Entity__c, &apos;National Accounts&apos;)</errorConditionFormula>
        <errorMessage>Effective Date is required due to being a new vendor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANA_VR_VND02_FieldsCommingling</fullName>
        <active>false</active>
        <description>Require A Commingling Selection Per Vendor Type.</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c ,AND(( INCLUDES(VendorType__c,&quot;Pharmacy&quot;)  || INCLUDES(VendorType__c,&quot;Behavioral Health&quot;))
&amp;&amp; ISBLANK(FieldsCommingling__c)))</errorConditionFormula>
        <errorDisplayField>FieldsCommingling__c</errorDisplayField>
        <errorMessage>If Your Vendor Type is Pharmacy or Behavioral Health Please Select the Commingling Type - If None, Select N/A</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANA_VR_VND03_PackageContractCodeRequired</fullName>
        <active>true</active>
        <description>When &quot;no&quot; is selected for Entire Group Impacted, Package/Contract Code is required.</description>
        <errorConditionFormula>AND( 
!$User.BypassValidation__c ,ISPICKVAL( IsEntireGroupImpacted__c , &quot;No&quot;)
&amp;&amp;
ISBLANK(PackageContractCode__c)
&amp;&amp; Terming__c = False
)</errorConditionFormula>
        <errorDisplayField>PackageContractCode__c</errorDisplayField>
        <errorMessage>Please enter Package/Contract Code(s) impacted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Exception_Type</fullName>
        <active>true</active>
        <description>Exception Type is mandatory when Involvement Type is Management Exception</description>
        <errorConditionFormula>AND(
 ISPICKVAL( Involvement_Type__c , &quot;Management Exception&quot;), 
 ISBLANK( TEXT( Exception_Type__c ) ) 
)</errorConditionFormula>
        <errorDisplayField>Exception_Type__c</errorDisplayField>
        <errorMessage>Please select an Exception Type</errorMessage>
    </validationRules>
</CustomObject>